<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.unit8.souther</groupId>
    <artifactId>souther-parent</artifactId>
    <version>0.1.0-rc2</version>
    <packaging>pom</packaging>

    <name>Souther</name>
    <description>Souther: a JVM language that turns SMDD spec models into implementation models.</description>
    <url>https://github.com/kawasima/souther</url>

    <licenses>
        <license>
            <name>Eclipse Public License - v 2.0</name>
            <url>https://www.eclipse.org/legal/epl-2.0/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>kawasima</id>
            <name>kawasima</name>
            <url>https://github.com/kawasima</url>
        </developer>
    </developers>

    <modules>
        <module>souther-runtime</module>
        <module>souther-syntax</module>
        <module>souther-compiler</module>
        <module>souther-fmt</module>
        <module>souther-lsp</module>
        <module>souther-cli</module>
    </modules>

    <scm>
        <connection>scm:git:https://github.com/kawasima/souther.git</connection>
        <developerConnection>scm:git:git@github.com:kawasima/souther.git</developerConnection>
        <url>https://github.com/kawasima/souther</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>25</maven.compiler.release>
        <raoh.version>0.6.0</raoh.version>
        <junit.version>6.1.2</junit.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>net.unit8.raoh</groupId>
                <artifactId>raoh</artifactId>
                <version>${raoh.version}</version>
            </dependency>
            <dependency>
                <groupId>net.unit8.raoh</groupId>
                <artifactId>raoh-json</artifactId>
                <version>${raoh.version}</version>
            </dependency>
            <dependency>
                <groupId>net.unit8.raoh</groupId>
                <artifactId>raoh-jooq</artifactId>
                <version>${raoh.version}</version>
            </dependency>
            <dependency>
                <groupId>net.unit8.souther</groupId>
                <artifactId>souther-runtime</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>net.unit8.souther</groupId>
                <artifactId>souther-syntax</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>net.unit8.souther</groupId>
                <artifactId>souther-compiler</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>net.unit8.souther</groupId>
                <artifactId>souther-fmt</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.6</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <!-- Activate for a Central release: `mvn -Prelease deploy`. Attaches sources and
             javadoc, GPG-signs every artifact, and publishes the reactor to the Sonatype
             Central Portal (autoPublish=false, so the bundle is reviewed in the Portal before
             release). Normal build/test is untouched. -->
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.4.0</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.12.0</version>
                        <configuration>
                            <doclint>none</doclint>
                            <failOnError>false</failOnError>
                            <quiet>true</quiet>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.8</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.11.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <autoPublish>false</autoPublish>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
